--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.0.0",
-    "rimraff": "^0.0.1-security",
+    "rimraf": "^3.0.2",
     "sass": "^1.45.0"
   }
 }
